--- a/esercizi/es2.html
+++ b/esercizi/es2.html
@@ -4,6 +4,21 @@
 
 </head>
   <body>
-    
+    <table>
+       <tr>
+         <th colspan="7">
+           WEEK
+         </th>
+      </tr>
+      <tr>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wes</th>
+        <th>Thu</th>
+        <th>Fri</th>
+        <th>Sat</th>
+        <th>Sun</th>
+      </tr>
+    </table>
   </body>
 </html>
