--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -38,5 +38,11 @@
 <h2 class="city">Tokyo</h2>
 <p>Tokyo is the capital of Japan.</p>
 
+<hr/>
+  
+<h2>Margin, padding and border.</h2>
+
+<img src="padding-margin.jpeg" />
+  
 </body>
 </html>
