--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -9,6 +9,15 @@
   padding: 40px;
   text-align: center;
 }
+  
+#myHeader2 {
+  background-color: lightblue;
+  color: black;
+  padding: 40px;
+  margin: 20px;
+  border: 5px;
+  text-align: center;
+}
 
 /* Style all elements with the class name "city" */
 .city {
@@ -43,6 +52,8 @@
 <h2>Margin, padding and border.</h2>
 
 <img src="padding-margin.jpeg" />
+  
+<h1 id="myHeader2" class="city" >My Cities with margin</h1>
   
 </body>
 </html>
