--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -14,8 +14,16 @@
   background-color: lightblue;
   color: black;
   padding: 40px;
-  margin: 20px;
-  border: 5px;
+  margin: 40px;
+  text-align: center;
+}
+  
+#myHeader3 {
+  background-color: lightblue;
+  color: black;
+  padding: 40px;
+  margin: 40px;
+  border: 5px solid black;
   text-align: center;
 }
 
@@ -52,8 +60,10 @@
 <h2>Margin, padding and border.</h2>
 
 <img src="padding-margin.jpeg" />
-  
-<h1 id="myHeader2" class="city" >My Cities with margin</h1>
+
+<h1 id="myHeader2" class="city" >My Cities only padding</h1>
+<h1 id="myHeader2" class="city" >My Cities with padding/margin</h1>
+<h1 id="myHeader3" class="city" >My Cities with padding/margin/border</h1>
   
 </body>
 </html>
