--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -61,7 +61,7 @@
 
 <img src="padding-margin.jpeg" />
 
-<h1 id="myHeader2" class="city" >My Cities only padding</h1>
+<h1 id="myHeader" class="city" >My Cities only padding</h1>
 <h1 id="myHeader2" class="city" >My Cities with padding/margin</h1>
 <h1 id="myHeader3" class="city" >My Cities with padding/margin/border</h1>
   
