--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -10,6 +10,12 @@
   text-align: center;
 }
   
+#myHeader0 {
+  background-color: lightblue;
+  color: black;
+  text-align: center;
+}  
+  
 #myHeader2 {
   background-color: lightblue;
   color: black;
@@ -60,7 +66,8 @@
 <h2>Margin, padding and border.</h2>
 
 <img src="padding-margin.jpeg" />
-
+  
+<h1 id="myHeader0" class="city" >My Cities</h1>
 <h1 id="myHeader" class="city" >My Cities only padding</h1>
 <h1 id="myHeader2" class="city" >My Cities with padding/margin</h1>
 <h1 id="myHeader3" class="city" >My Cities with padding/margin/border</h1>
