--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <style>
+
+/* Style all elements with the class name "city" */
+.city {
+  background-color: tomato;
+  color: white;
+}   
+  
 /* Style the element with the id "myHeader" */
-#myHeader {
+#myCity {
   background-color: lightblue;
   color: black;
-  padding: 40px;
   text-align: center;
 }
   
@@ -14,7 +20,15 @@
   background-color: lightblue;
   color: black;
   text-align: center;
-}  
+} 
+  
+/* Style the element with the id "myHeader" */
+#myHeader1 {
+  background-color: lightblue;
+  color: black;
+  padding: 40px;
+  text-align: center;
+}
   
 #myHeader2 {
   background-color: lightblue;
@@ -33,12 +47,6 @@
   text-align: center;
 }
 
-/* Style all elements with the class name "city" */
-.city {
-  background-color: tomato;
-  color: white;
-  padding: 10px;
-} 
 </style>
 </head>
 <body>
@@ -47,9 +55,11 @@
 <h2 style="color:red;">Styles, Classes and IDs</h2>
 
 <!-- An element with a unique id -->
-<h1 class="city" id="myHeader" >My Cities</h1>
+<h1 class="city" id="myCity" >My Cities</h1>
+
+<!-- <h1 id="myHeader" class="city" >My Cities2</h1> ERRORE -->
   
-<h1 id="myHeader" class="city" >My Cities2</h1>
+<h1 class="city">Cities</h1>  
 
 <!-- Multiple elements with same class -->
 <h2 class="city">London</h2>
@@ -67,10 +77,10 @@
 
 <img src="padding-margin.jpeg" />
   
-<h1 id="myHeader0" class="city" >My Cities</h1>
-<h1 id="myHeader" class="city" >My Cities only padding</h1>
-<h1 id="myHeader2" class="city" >My Cities with padding/margin</h1>
-<h1 id="myHeader3" class="city" >My Cities with padding/margin/border</h1>
+<h1 id="myHeader0"  >My Cities</h1>
+<h1 id="myHeader1"  >My Cities only padding</h1>
+<h1 id="myHeader2"  >My Cities with padding/margin</h1>
+<h1 id="myHeader3"  >My Cities with padding/margin/border</h1>
   
 </body>
 </html>
