--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -4,11 +4,13 @@
 
 </head>
   <body>
+    <p>I colori usati sono: grey, yellow, blue</p>
+    
     <table>
        <tr>
-         <th rowspan="2">N.</th>
-         <td rowspan="2">Titolo</td>
-         <th colspan="2">Data di prima pubblicazione</th>
+         <th rowspan="2" style="background-color: grey;">N.</th>
+         <td rowspan="2" style="background-color: grey;">Titolo</td>
+         <th colspan="2" style="background-color: yellow;">Data di prima pubblicazione</th>
        </tr>
          <tr>
          <th style="color: blue;">Giapponese</th>
