--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -16,6 +16,12 @@
          <th style="color: blue;">Giapponese</th>
          <th style="color: blue;">Italiano</th>
        </tr>
+       <tr>
+         <td rowspan="3" style="background-color: grey;">1</th>
+         <td><strong>Ryomen Sukuna</strong></td>
+         <td>4 luglio 2018<sup style="color: blue;">[2]</sup></td>
+         <td>31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
+       </tr>
     </table>
   </body>
 </html>
