--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -22,6 +22,15 @@
          <td>4 luglio 2018<sup style="color: blue;">[2]</sup></td>
          <td>31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
        </tr>
+       <tr>
+         <td colspan="3">Capitoli: <br/> 
+            <ol>
+               <li>Ryomen Sukuna </li>
+               <li>L'esecuzione rinviata</li>
+               <li>....</li>
+            </ol>
+         </td>
+       </tr>
     </table>
   </body>
 </html>
