--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -3,17 +3,17 @@
 <head>
 <style>
   td, th {
-     padding: 5px;
-     border: 1px solid black;
+     padding: 10px;
   }
   table {
-  border: 1px solid black;
+   border: 1px solid black;
+   border-collapse: collapse;
  }
 </style>
 </head>
   <body>
     <p>I colori usati sono: grey, yellow, blue.<br/></p>
-    Tutte le celle hanno padding di 5px.<br/>
+    Tutte le celle hanno padding di 10px.<br/>
     Applicare bordo di 1px solido
     </p>
     <table>
