--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -14,7 +14,7 @@
   <body>
     <p>I colori usati sono: grey, yellow, blue.<br/></p>
     Tutte le celle hanno padding di 10px.<br/>
-    Applicare bordo di 1px solido
+    Applicare bordo di 1px su tutti gli elementi della tabella
     </p>
     <table>
        <tr>
