--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -3,7 +3,7 @@
 <head>
 <style>
   td, th {
-     padding: 10px;
+     padding: 20px;
   }
   table, td, th {
    border: 1px solid black;
@@ -12,8 +12,8 @@
 </style>
 </head>
   <body>
-    <p>I colori usati sono: grey, yellow, blue.<br/></p>
-    Tutte le celle hanno padding di 10px.<br/>
+    <p>I colori usati sono: grey, yellow, blue.<br/>
+    Tutte le celle hanno padding di 20px.<br/>
     Applicare bordo di 1px su tutti gli elementi della tabella
     </p>
     <table>
