--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -3,7 +3,7 @@
 <head>
 <style>
   td, th {
-     padding: 20px;
+     padding: 20px 10px 20px 10px;
   }
   table, td, th {
    border: 1px solid black;
@@ -13,7 +13,7 @@
 </head>
   <body>
     <p>I colori usati sono: grey, yellow, blue.<br/>
-    Tutte le celle hanno padding di 20px.<br/>
+    Tutte le celle hanno padding di 20px orizzontalmente e 10px verticalemnte<br/>
     Applicare bordo di 1px su tutti gli elementi della tabella
     </p>
     <table>
