--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -3,7 +3,7 @@
 <head>
 <style>
   td, th {
-     padding: 20px 10px 20px 10px;
+     padding: 10px 20px 10px 20px;
   }
   table, td, th {
    border: 1px solid black;
@@ -36,8 +36,8 @@
          <td colspan="3">Capitoli: <br/> 
             <ol>
                <li>Ryomen Sukuna </li>
-               <li>L'esecuzione rinviata</li>
-               <li>....</li>
+               <li>...</li>
+               <li>Per me stesso</li>
             </ol>
          </td>
        </tr>
