--- a/prova2/index4.html
+++ b/prova2/index4.html
@@ -13,7 +13,7 @@
 </head>
   <body>
     <p>I colori usati sono: grey, yellow, blue.<br/>
-    Tutte le celle hanno padding di 20px orizzontalmente e 10px verticalemnte<br/>
+    Tutte le celle della tabella hanno padding di 20px orizzontalmente e 10px verticalemnte<br/>
     Applicare bordo di 1px su tutti gli elementi della tabella
     </p>
     <table>
