--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -60,9 +60,11 @@
 
 <!-- <h1 id="myHeader" class="city" >My Cities2</h1> ERRORE -->
   
-<h1 class="city">Cities</h1>  
+<h1 class="city">Cities</h1> 
+  
+<h1>Cities</h1> 
 
-<!-- Multiple elements with same class -->
+  <!-- Multiple elements with same class -->
 <h2 class="city">London</h2>
 <p>London is the capital of England.</p>
 
