--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -46,7 +46,7 @@ p {
 #myHeader3 {
   background-color: lightblue;
   color: black;
-  padding: 40px;
+  padding: 40px;  /* 40px 0px 40px 0px top right, bottom, left */
   margin: 40px;
   border: 10px solid black;
   text-align: center;
