--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -23,17 +23,24 @@
       </tr>
       
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th rowspan="2">1</th>
+        <th>Ryomen Sukuna</th>
+        <td>4 luglio 2018<sup>[2]</sup></td>
+        <td>31 ottobre 2019<sup>[3]</sup></td>
       </tr>
                   
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <!-- <td></td> -->
+        <td colspan="3">
+        Capitoli:
+          <ol>
+            <li>Ryomen Sukuna</li>
+            <li>...</li>
+            <li>Per me stesso</li>
+          </ol>
+        </td>
+        <!-- <td></td> -->
+        <!-- <td></td> -->
       </tr>   
     </table>
   </body>
