--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -3,6 +3,13 @@
 <html>
 <head>
 
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse; /* default: separate */
+}
+</style> 
+  
 </head>
   <body>
      
