--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -16,8 +16,8 @@ table, th, td {
     <table>
       <!-- prima riga -->
       <tr>
-        <th rowspan="2">N.</th>
-        <td rowspan="2">Titolo</td>
+        <th rowspan="2" style="background-color: grey;">N.</th>
+        <td rowspan="2" style="background-color: grey;">Titolo</td>
         <th colspan="2">Data di prima pubblicazione</th>
         <!-- <td></td> -->
       </tr>
@@ -30,7 +30,7 @@ table, th, td {
       </tr>
       
       <tr>
-        <th rowspan="2">1</th>
+        <th rowspan="2" style="background-color: grey;">1</th>
         <th>Ryomen Sukuna</th>
         <td>4 luglio 2018<sup>[2]</sup></td>
         <td>31 ottobre 2019<sup>[3]</sup></td>
