--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -18,7 +18,7 @@ table, th, td {
       <tr>
         <th rowspan="2" style="background-color: grey;">N.</th>
         <td rowspan="2" style="background-color: grey;">Titolo</td>
-        <th colspan="2">Data di prima pubblicazione</th>
+        <th colspan="2" style="background-color: yellow;">Data di prima pubblicazione</th>
         <!-- <td></td> -->
       </tr>
       
