--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -25,15 +25,15 @@ table, th, td {
       <tr>
         <!-- <td></td> -->
         <!-- <td></td> -->
-        <th>Giapponese</th>
-        <th>Italiano</th>
+        <th style="color: blue;">Giapponese</th>
+        <th style="color: blue;">Italiano</th>
       </tr>
       
       <tr>
         <th rowspan="2" style="background-color: grey;">1</th>
         <th>Ryomen Sukuna</th>
-        <td>4 luglio 2018<sup>[2]</sup></td>
-        <td>31 ottobre 2019<sup>[3]</sup></td>
+        <td>4 luglio 2018<sup style="color: blue;">[2]</sup></td>
+        <td>31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
       </tr>
                   
       <tr>
