--- a/4ea/es4-4ea.html
+++ b/4ea/es4-4ea.html
@@ -4,6 +4,14 @@
 <head>
 
 <style>
+  
+th, td {
+  padding: 10px 20px 10px 20px; /* top right bottom left */
+  /*
+    padding-top: 10px;
+  */
+} 
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse; /* default: separate */
