--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -22,33 +22,33 @@ p {
 }
   
 #myHeader0 {
-  background-color: lightblue;
-  color: black;
+  background-color: blue;
+  color: white;
   text-align: center;
 } 
   
 /* Style the element with the id "myHeader" */
 #myHeader1 {
-  background-color: lightblue;
-  color: black;
+  background-color: blue;
+  color: white;
   padding: 40px;
   text-align: center;
 }
   
 #myHeader2 {
-  background-color: lightblue;
-  color: black;
+  background-color: blue;
+  color: white;
   padding: 40px;
   margin: 40px;
   text-align: center;
 }
   
 #myHeader3 {
-  background-color: lightblue;
-  color: black;
+  background-color: blue;
+  color: white ;
   padding: 40px;  /* 40px 0px 40px 0px top right, bottom, left */
   margin: 40px;
-  border: 10px solid black;
+  border: 10px solid red;
   text-align: center;
 }
 
