--- a/4ar/es4.html
+++ b/4ar/es4.html
@@ -34,9 +34,11 @@ table, th, td {
       
       <tr>
         <!-- <td></td> -->
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan="3">
+        
+        </td>
+        <!-- <td></td> -->
+        <!-- <td></td> -->
       </tr>
     </table>
   </body>
