--- a/prova/bak.html
+++ b/prova/bak.html
@@ -3,8 +3,11 @@
 <html>
 <head>
 <style>
-table, th, td {
-  border: 1px solid black;
+table {
+  border-top: 1px;
+  border-bottom:1px;
+  border-style: solid;
+  border-color: red;
   border-collapse: collapse; /* default: separate */
 }
 </style> 
