--- a/prova/bak.html
+++ b/prova/bak.html
@@ -10,15 +10,26 @@ table {
   border-color: red;
   border-collapse: collapse; /* default: separate */
 }
+td {
+  font-size: 0.5em;  
+  color: grey;
+}  
+  
+td.title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  color:red;
+  font-weight: 800;
+}    
 </style> 
 </head>
   <body>
     <table>
          <tr>
-           <td rowspan="2"><img src"../img/bacheca_85px.png" /></td>
-           <td>BACHECA</td>
+           <td rowspan="2"><img src="../img/bacheca_85px.png" /></td>
+           <td class="title">BACHECA</td>
            <td>Bacheca online</td>
-           <td><img src"../img/bollo_help_2.png" /></td>
+           <td><img src="../img/bollo_help_2.png" /></td>
          </tr>
             <td>Consulta la bacheca</td>
             <td>Visualizza i messaggi in bacheca</td>
