--- a/prova/bak.html
+++ b/prova/bak.html
@@ -4,11 +4,12 @@
 <head>
 <style>
 table {
-  border-top: 1px;
-  border-bottom:1px;
-  border-style: solid;
-  border-color: red;
+  border-top: 1px solid red;
+  border-bottom:1px solid red;
   border-collapse: collapse; /* default: separate */
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 td {
   font-size: 0.5em;  
@@ -26,7 +27,7 @@ td.title {
   <body>
     <table>
          <tr>
-           <td rowspan="2"><img src="../img/bacheca_85px.png" /></td>
+           <td rowspan="2" style="wi"><img src="../img/bacheca_85px.png" /></td>
            <td class="title">BACHECA</td>
            <td>Bacheca online</td>
            <td><img src="../img/bollo_help_2.png" /></td>
