--- a/prova/bak.html
+++ b/prova/bak.html
@@ -12,7 +12,7 @@ table {
   margin-right: auto;
 }
 td {
-  font-size: 0.5em;  
+  font-size: 0.8em;  
   color: grey;
 }  
   
@@ -22,6 +22,11 @@ td.title {
   color:red;
   font-weight: 800;
 }    
+  
+img {
+  width: 40px;
+  height: 40px;
+} 
 </style> 
 </head>
   <body>
