--- a/prova/bak.html
+++ b/prova/bak.html
@@ -21,7 +21,14 @@ td.title {
   font-size: 1.5em;
   color:red;
   font-weight: 800;
-}    
+} 
+
+td.title_grey {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  color: grey;
+  font-weight: 800;
+} 
   
 img {
   width: 40px;
@@ -32,14 +39,14 @@ img {
   <body>
     <table>
          <tr>
-           <td rowspan="2" style="wi"><img src="../img/bacheca_85px.png" /></td>
+           <td rowspan="2" style="width: 50px"><img src="../img/bacheca_85px.png" /></td>
            <td class="title">BACHECA</td>
-           <td>Bacheca online</td>
-           <td><img src="../img/bollo_help_2.png" /></td>
+           <td class="title_grey">Bacheca online</td>
+           <td style="width: 50px"><img src="../img/bollo_help_2.png" /></td>
          </tr>
             <td>Consulta la bacheca</td>
-            <td>Visualizza i messaggi in bacheca</td>
-            <td>Aiuto</td>
+            <td style="text-align: center;">Visualizza i messaggi in bacheca</td>
+            <td style="text-align: center;">Aiuto</td>
          <tr>
          </tr>
     </table>
