--- a/prova/bak.html
+++ b/prova/bak.html
@@ -42,10 +42,10 @@ img {
            <td rowspan="2" style="width: 50px"><img src="../img/bacheca_85px.png" /></td>
            <td class="title">BACHECA</td>
            <td class="title_grey">Bacheca online</td>
-           <td style="width: 50px"><img src="../img/bollo_help_2.png" /></td>
+           <td style="width: 50px;ign: center;"><img src="../img/bollo_help_2.png" /></td>
          </tr>
             <td>Consulta la bacheca</td>
-            <td style="text-align: center;">Visualizza i messaggi in bacheca</td>
+            <td>Visualizza i messaggi in bacheca</td>
             <td style="text-align: center;">Aiuto</td>
          <tr>
          </tr>
