--- a/prova/bak.html
+++ b/prova/bak.html
@@ -40,14 +40,14 @@ img {
     <table>
          <tr>
            <td rowspan="2" style="width: 50px"><img src="../img/bacheca_85px.png" /></td>
-           <td class="title">BACHECA</td>
+           <td class="title" style="width: 30%">BACHECA</td>
            <td class="title_grey">Bacheca online</td>
            <td style="width: 50px;ign: center;"><img src="../img/bollo_help_2.png" /></td>
          </tr>
-            <td>Consulta la bacheca</td>
+         <tr>
+            <td style="width: 30%">Consulta la bacheca</td>
             <td>Visualizza i messaggi in bacheca</td>
             <td style="text-align: center;">Aiuto</td>
-         <tr>
          </tr>
     </table>
   </body>
