--- a/prova/bak.html
+++ b/prova/bak.html
@@ -27,7 +27,7 @@ td.title_grey {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   color: grey;
-  font-weight: 200;
+  font-weight: 100;
 } 
   
 img {
@@ -37,6 +37,15 @@ img {
 </style> 
 </head>
   <body>
+    <p>
+      Tabella: deve occupare solo 80% dello spazio. mettere margin-left: auto; margin-right: auto; per centrarla.<br/>
+      Immagini devono essere impostate con 40px di larghezza e altezza.<br/>
+      Lo spessore della scritta "BACHECA" è di 800. Quello della scritta "Bacheca online" è 100.<br/>
+      Colori utilizzati red e grey. <br/>
+      Font "BACHECA" e  "Bacheca online": 50% più grande del font base e famiglia "Arial, Helvetica, sans-serif"<br/>
+      Il resto dei font ridotti all'80% 
+      
+    </p>
     <table>
          <tr>
            <td rowspan="2" style="width: 50px"><img src="../img/bacheca_85px.png" /></td>
