--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -47,7 +47,7 @@ p {
   background-color: blue;
   color: white ;
   padding: 40px;  /* 40px 0px 40px 0px top right, bottom, left */
-  margin: 40px;
+  margin: 40px; /* margin-top: 40px; */
   border: 10px solid red;
   text-align: center;
 }
