--- a/4da/es4.html
+++ b/4da/es4.html
@@ -23,10 +23,10 @@ table, th, td {
         <th>Italiano</th>
       </tr>
       <tr> 
-        <th rowspan="2"></th>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th rowspan="2">1</th>
+        <th>Ryomen Sukuna</th>
+        <td style="text-align: center;">4 luglio 2018<sup style="color: blue;">[2]</sup></td>
+        <td>31 ottobre 2019</td>
       </tr>
       <tr> 
         <!-- <td></td>-->
