--- a/4da/es4.html
+++ b/4da/es4.html
@@ -6,6 +6,10 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse; /* default: separate */
 }
+  
+  td, th {
+    padding: 10px 20px 10px 20px;
+  }  
 </style>  
 </head>
   <body>
@@ -26,7 +30,8 @@ table, th, td {
         <th rowspan="2">1</th>
         <th>Ryomen Sukuna</th>
         <td style="text-align: center;">4 luglio 2018<sup style="color: blue;">[2]</sup></td>
-        <td>31 ottobre 2019</td>
+        <td style="text-align: center;">31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
+
       </tr>
       <tr> 
         <!-- <td></td>-->
