--- a/4ea/es5.html
+++ b/4ea/es5.html
@@ -11,7 +11,7 @@
   </style>
 </head>
   <body>
-    <div>
+    <div class="sfondo">
       Saturno
       Il primo studio condotto da ricercatori Swedish...
       e dell'Università,....
