--- a/esercizi/elementi-style.html
+++ b/esercizi/elementi-style.html
@@ -46,7 +46,12 @@ p {
 #myHeader3 {
   background-color: blue;
   color: white ;
-  padding: 40px;  /* 40px 0px 40px 0px top right, bottom, left */
+  padding: 40px;  
+  /* 
+    40px 0px 40px 0px 
+    top right, bottom, left 
+    padding-top: 20px;
+  */
   margin: 40px; /* margin-top: 40px; */
   border: 10px solid red;
   text-align: center;
