--- a/4ar/es4.html
+++ b/4ar/es4.html
@@ -7,12 +7,16 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse; /* default: separate */
 }
+  
+.tuttogrigio {
+    background-color: grey;
+  }
 </style>
 </head>
   <body>
     <table>
       <tr>
-        <th rowspan="2">N.</th>
+        <th rowspan="2" class="tuttogrigio">N.</th>
         <td rowspan="2">Titolo</td>
         <td colspan="2">Data di prima pubblicazione</td>
         <!-- <td></td> -->
