--- a/prova/bak.html
+++ b/prova/bak.html
@@ -39,11 +39,12 @@ img {
   <body>
     <p>
       Tabella: deve occupare solo 80% dello spazio. Mettere margin-left: auto; margin-right: auto; per centrarla nella pagina.<br/>
-      Immagini devono essere impostate con 40px di larghezza e altezza.<br/>
+      Immagini devono essere impostate con 50x di larghezza e altezza.<br/>
       Lo spessore della scritta "BACHECA" è di 800. Quello della scritta "Bacheca online" è 100.<br/>
       Colori utilizzati red e grey. <br/>
       Font "BACHECA" e  "Bacheca online": 50% più grande del font base e famiglia "Arial, Helvetica, sans-serif"<br/>
-      Il resto dei font ridotti all'80%.
+      Il resto dei font ridotti all'80%.<br/>
+      Le celle di "BACHECA" e "Consulta..." sono larghe il 20% della tabella.
       
     </p>
     <table>
