--- a/4ea/es5.html
+++ b/4ea/es5.html
@@ -3,7 +3,10 @@
 <html>
 <head>
   <style>
-
+   /*.sfondo {
+      background-color: #ffd480; 
+    }
+    */
     div.sfondo {
       background-color: #ffd480; 
     }
@@ -18,10 +21,14 @@
   <body> <!-- commento -->
     <div class="sfondo">
       <span class="titolo">Saturno</span> <br/>
-      Il primo studio condotto da ricercatori Swedish...
-      e dell'Università,....
-      ....
-      SKR (Saturn... )
+      Il primo studio condotto da ricercatori 
+      Swedish Institute of Space Physics,
+      del Goddard Space Fight Center
+      e dell'Università dell'Iowa, si è concentrato 
+      sulle cause di un noto fenomeno che caratterizza Saturno:
+      il grande pianeta è interessato da emissioni esplosive
+      di radiazioni, note come
+      SKR (Saturn kilometric radiation).
     </div>
   </body>
 </html>
