--- a/4ea/es5.html
+++ b/4ea/es5.html
@@ -15,6 +15,11 @@
       font-style: italic; /* normal oblique */
       font-weight: 900; /* normal bold 100-900,  400 is normal 700 bold*/
     }
+    
+    span.testo {
+      backgroud-color: yellow;
+      color: red;
+    } 
    
   </style>
 </head>
@@ -22,8 +27,8 @@
     <div class="sfondo">
       <span class="titolo">Saturno</span> <br/>
       Il primo studio condotto da ricercatori 
-      Swedish Institute of Space Physics,
-      del Goddard Space Fight Center
+      <span class="testo">Swedish Institute of Space Physics,
+        del Goddard Space Fight Center</span>
       e dell'Università dell'Iowa, si è concentrato 
       sulle cause di un noto fenomeno che caratterizza Saturno:
       il grande pianeta è interessato da emissioni esplosive
