--- a/4ea/es5.html
+++ b/4ea/es5.html
@@ -38,7 +38,7 @@
       Il primo studio condotto da ricercatori 
       <span class="testo">Swedish Institute of Space Physics,
         del Goddard Space Fight Center</span>
-      e dell'<span class="testo-blu">Università dell'Iowa<span>, si è concentrato 
+      e dell'<span class="testo-blu">Università dell'Iowa</span>, si è concentrato 
       sulle cause di un noto fenomeno che caratterizza Saturno:
       il grande pianeta è interessato da emissioni esplosive
       di radiazioni, note come
