--- a/4ea/es5.html
+++ b/4ea/es5.html
@@ -28,7 +28,13 @@
       font-weight: bold;
     }
     
+    span.testo-skr {
+      color: CornflowerBlue;
+    }
     
+    span.testo-corsivo {
+      font-style: italic;
+    }
    
   </style>
 </head>
@@ -42,7 +48,8 @@
       sulle cause di un noto fenomeno che caratterizza Saturno:
       il grande pianeta è interessato da emissioni esplosive
       di radiazioni, note come
-      SKR (Saturn kilometric radiation).
+      <span class="testo-skr">SKR 
+        (<span class="testo-corsivo">Saturn kilometric radiation</span>)</span>.
     </div>
   </body>
 </html>
