--- a/4da/es4.html
+++ b/4da/es4.html
@@ -35,9 +35,17 @@ table, th, td {
       </tr>
       <tr> 
         <!-- <td></td>-->
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan="3">
+          Capitoli <br/>
+            <ol> <!-- ul -->
+              <li>Ryomen Sukuna</li>
+              <li>...</li>
+              <li>Per me stesso</li>
+              
+            </ol>
+        </td>
+        <!-- <td></td> -->
+        <!-- <td></td> -->
       </tr>
     </table>
   </body>
