--- a/4da/es4.html
+++ b/4da/es4.html
@@ -9,15 +9,24 @@ table, th, td {
   
   td, th {
     padding: 10px 20px 10px 20px;
-  }  
+  }
+  
+  .sfondo-grigio {
+    background-color: grey;
+  }
+  
+  .sfondo-giallo {
+    background-color: yellow;
+  }
+  
 </style>  
 </head>
   <body>
     <table>
       <tr> 
-        <th rowspan="2">N.</th>
-        <td rowspan="2">Titolo</td>
-        <th colspan="2">Data di prima pubblicazione</th>
+        <th rowspan="2" class="sfondo-grigio" >N.</th>
+        <td rowspan="2" class="sfondo-grigio">Titolo</td>
+        <th colspan="2" class="sfondo-giallo">Data di prima pubblicazione</th>
         <!-- <td></td> -->
       </tr>
       <tr> 
@@ -27,7 +36,7 @@ table, th, td {
         <th>Italiano</th>
       </tr>
       <tr> 
-        <th rowspan="2">1</th>
+        <th rowspan="2" class="sfondo-grigio">1</th>
         <th>Ryomen Sukuna</th>
         <td style="text-align: center;">4 luglio 2018<sup style="color: blue;">[2]</sup></td>
         <td style="text-align: center;">31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
