--- a/4da/es4.html
+++ b/4da/es4.html
@@ -19,6 +19,9 @@ table, th, td {
     background-color: yellow;
   }
   
+  .colore-blue {
+    color: blue;
+  }
 </style>  
 </head>
   <body>
@@ -32,8 +35,8 @@ table, th, td {
       <tr> 
        <!-- <td></td> -->
        <!-- <td></td> -->
-        <th>Giapponese</th>
-        <th>Italiano</th>
+        <th class="colore-blue">Giapponese</th>
+        <th class="colore-blue">Italiano</th>
       </tr>
       <tr> 
         <th rowspan="2" class="sfondo-grigio">1</th>
