--- a/4da/es4.html
+++ b/4da/es4.html
@@ -41,7 +41,7 @@ table, th, td {
       <tr> 
         <th rowspan="2" class="sfondo-grigio">1</th>
         <th>Ryomen Sukuna</th>
-        <td style="text-align: center;">4 luglio 2018<sup style="color: blue;">[2]</sup></td>
+        <td style="text-align: center;">4 luglio 2018<sup class="colore-blue">[2]</sup></td>
         <td style="text-align: center;">31 ottobre 2019<sup style="color: blue;">[3]</sup></td>
 
       </tr>
