--- a/esercizi/elementi-css.html
+++ b/esercizi/elementi-css.html
@@ -5,6 +5,8 @@
   <body>
     <h1>Titolo</h1>
     <h1 class="titolo2">Titolo con class</h1>
+    <h2 class="titolo2">Titolo h2 con class</h2>
+    
     <h1 class="maiuscolo titolo">Titolo con class e maiuscolo</h1>
     <h1 class="titolo maiuscolo">Titolo con class e maiuscolo</h1>
     
