--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -13,23 +13,23 @@
       <tr>
         <th rowspan="2">N.</th>
         <td rowspan="2"titolo></td>
-        <th colspan="2">data ......</th>
+        <th colspan="2">Data prima ......</th>
         <!-- <td></td> -->
       </tr>
       <tr>
         <!-- <td></td> -->
-        <td></td>
-        <td></td>
-        <td></td>
+        <!-- <td></td> -->
+        <th>Giapponese</th>
+        <th>Italiano</th>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan"2"></td>
+        <th>ryomen sukuna</th>
+        <td>4 luglio 2018<sup>[2]</sup> </td>
+        <td>31 ottobre 2019<sup>[3]</sup></td>
       </tr>
       <tr>
-        <td></td>
+        <!-- <th>1</th> -->
         <td></td>
         <td></td>
         <td></td>
