--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -12,7 +12,7 @@
     <table>
       <tr>
         <th rowspan="2">N.</th>
-        <td rowspan="2"titolo></td>
+        <td rowspan="2">Titolo</td>
         <th colspan="2">Data prima ......</th>
         <!-- <td></td> -->
       </tr>
