--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -23,16 +23,24 @@
         <th>Italiano</th>
       </tr>
       <tr>
-        <td rowspan"2"></td>
+        <td rowspan="2">1</td>
         <th>ryomen sukuna</th>
         <td>4 luglio 2018<sup>[2]</sup> </td>
         <td>31 ottobre 2019<sup>[3]</sup></td>
       </tr>
       <tr>
         <!-- <th>1</th> -->
-        <td></td>
-        <td></td>
-        <td></td>
+        <td colspan="3">
+          capitoli:
+          <ol>
+            <li>ryomen sukuna</li>
+            <li>...</li>
+            <li>per me stesso</li>
+          </ol>
+        
+        </td>
+        <!-- <td></td> -->
+        <!-- <td></td> -->
       </tr>
     </table>  
   </body>
