--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -6,13 +6,18 @@
     border: 1px solid black;
     border-collapse: collapse; /* default: separate */
   }
+  
+  .grigio {
+    background-color: grey;
+  }
+  
 </style>  
 </head>
   <body>
     <table>
       <tr>
-        <th rowspan="2">N.</th>
-        <td rowspan="2">Titolo</td>
+        <th rowspan="2" class="grigio">N.</th>
+        <td rowspan="2" class="grigio">Titolo</td>
         <th colspan="2">Data prima ......</th>
         <!-- <td></td> -->
       </tr>
@@ -23,7 +28,7 @@
         <th>Italiano</th>
       </tr>
       <tr>
-        <td rowspan="2">1</td>
+        <td rowspan="2" class="grigio">1</td>
         <th>ryomen sukuna</th>
         <td>4 luglio 2018<sup>[2]</sup> </td>
         <td>31 ottobre 2019<sup>[3]</sup></td>
