--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -18,7 +18,7 @@
       <tr>
         <th rowspan="2" class="grigio">N.</th>
         <td rowspan="2" class="grigio">Titolo</td>
-        <th colspan="2">Data prima ......</th>
+        <th colspan="2" style="background-color: yellow;">Data prima ......</th>
         <!-- <td></td> -->
       </tr>
       <tr>
