--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -11,6 +11,10 @@
     background-color: grey;
   }
   
+  .font-blue {
+    color: blue;
+  }
+  
 </style>  
 </head>
   <body>
@@ -24,14 +28,14 @@
       <tr>
         <!-- <td></td> -->
         <!-- <td></td> -->
-        <th>Giapponese</th>
-        <th>Italiano</th>
+        <th class="font-blue">Giapponese</th>
+        <th  class="font-blue">Italiano</th>
       </tr>
       <tr>
         <td rowspan="2" class="grigio">1</td>
         <th>ryomen sukuna</th>
-        <td>4 luglio 2018<sup>[2]</sup> </td>
-        <td>31 ottobre 2019<sup>[3]</sup></td>
+        <td>4 luglio 2018<sup class="font-blue">[2]</sup> </td>
+        <td>31 ottobre 2019<sup class="font-blue">[3]</sup></td>
       </tr>
       <tr>
         <!-- <th>1</th> -->
