--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -15,6 +15,16 @@
     color: blue;
   }
   
+  td, th {
+    padding: 10px 20px 10px 20px;
+    /*
+      padding-top: 10px;
+      padding-right: 20px;
+      padding-left: 20px;
+      padding-bottom: 10px;
+    */
+  }
+  
 </style>  
 </head>
   <body>
