--- a/4ca/es4.html
+++ b/4ca/es4.html
@@ -31,7 +31,7 @@
     <table>
       <tr>
         <th rowspan="2" class="grigio">N.</th>
-        <td rowspan="2" class="grigio">Titolo</td>
+        <th rowspan="2" class="grigio">Titolo</th>
         <th colspan="2" style="background-color: yellow;">Data prima ......</th>
         <!-- <td></td> -->
       </tr>
