--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -6,14 +6,18 @@
     border: 1px solid black;
     border-collapse: collapse; /* default: separate */
   }
+  
+  .grigio {
+    background-color: grey;
+  }
 </style> 
 </head>
   <body>
     
     <table>
       <tr>
-        <th rowspan="2">N.</th>
-        <td rowspan="2">Titolo</td>
+        <th rowspan="2" class="grigio">N.</th>
+        <td rowspan="2" class="grigio">Titolo</td>
         <th colspan="2">Data pubblicazione</th>
         <!-- <td></td> -->
       </tr>
@@ -26,7 +30,7 @@
       </tr>
       
       <tr>
-        <th rowspan="2">1</th>
+        <th rowspan="2" class="grigio">1</th>
         <th>Ryomen Sukuna</th>
         <td>4 luglio 2018<sup>[2]</sup></td>
         <td>31 ottobre 2020<sup>[3]</sup></td>
