--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -18,7 +18,7 @@
       <tr>
         <th rowspan="2" class="grigio">N.</th>
         <td rowspan="2" class="grigio">Titolo</td>
-        <th colspan="2">Data pubblicazione</th>
+        <th colspan="2" style="background-color: yellow;">Data pubblicazione</th>
         <!-- <td></td> -->
       </tr>
       
