--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -10,6 +10,11 @@
   .grigio {
     background-color: grey;
   }
+  
+  .font-blue {
+    color: blue;
+  }
+  
 </style> 
 </head>
   <body>
@@ -25,15 +30,15 @@
       <tr>
         <!-- <td></td> -->
         <!-- <td></td> -->
-        <th>Giapponese</th>
-        <th>Italiano</th>
+        <th class="font-blue">Giapponese</th>
+        <th class="font-blue">Italiano</th>
       </tr>
       
       <tr>
         <th rowspan="2" class="grigio">1</th>
         <th>Ryomen Sukuna</th>
-        <td>4 luglio 2018<sup>[2]</sup></td>
-        <td>31 ottobre 2020<sup>[3]</sup></td>
+        <td>4 luglio 2018<sup class="font-blue">[2]</sup></td>
+        <td>31 ottobre 2020<sup class="font-blue">[3]</sup></td>
       </tr>
       
       <tr>
