--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -17,7 +17,12 @@
   
   td, th {
     padding: 10px 20px 10px 20x;
-  
+    /*
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom:10px;
+    padding-left: 20px;
+    */
   }
   
 </style> 
