--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -5,6 +5,7 @@
   table, th, td {
     border: 1px solid black;
     border-collapse: collapse; /* default: separate */
+    /* padding: 30px 30px 30px 30px;  */
   }
   
   .grigio {
