--- a/4dr/es4.html
+++ b/4dr/es4.html
@@ -17,7 +17,7 @@
   }
   
   td, th {
-    padding: 10px 20px 10px 20x;
+    padding: 10px 20px 10px 20px;
     /*
     padding-top: 10px;
     padding-right: 20px;
