--- a/4da/es5.html
+++ b/4da/es5.html
@@ -3,11 +3,6 @@
 <html>
 <head>
 <style>
-  /*
-  p {
-    background-color: Beige;
-  }
-  */
   
   .giallo-rosso {
     background-color: yellow;
@@ -19,7 +14,7 @@
   <body>
   <p style="background-color: Beige;">  
    Saturno <br/>
-    Il primo studio, ..... dello <span>Swedish Institute of Space Physics</span>, ... e
+    Il primo studio, ..... dello <span class="giallo-rosso">Swedish Institute of Space Physics</span>, ... e
     dell'Università dello Iowa, si è con......
     SKR (Saturtn kilometyric radiation).
   </p>
