--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -12,10 +12,10 @@
   <body>
      <table>
        <tr>
-         <td rowspan="2"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
+         <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
          <td></td>
          <td></td>
-         <td><img src="bollo_help_2.png" height="40px" width="40px" /></td>
+         <td style="width:50px;"><img src="bollo_help_2.png" height="40px" width="40px" /></td>
        </tr> 
        <tr>
          <!-- <td></td> -->
