--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -13,15 +13,15 @@
      <table>
        <tr>
          <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
-         <td></td>
-         <td></td>
+         <td>BACHECA</td>
+         <td>Bacheca Online</td>
          <td style="width:50px;"><img src="bollo_help_2.png" height="40px" width="40px" /></td>
        </tr> 
        <tr>
          <!-- <td></td> -->
-         <td></td>
-         <td></td>
-         <td></td>
+         <td>Consulta la bacheca</td>
+         <td>Visualizza messaggi in bacheca</td>
+         <td>Aiuto</td>
        </tr> 
      </table>
   </body>
