--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -7,6 +7,12 @@
       border: 1px solid black;
       border-collapse: collapse; /* default: separate */
     }
+    
+    span.testo-spesso {
+      color: red;
+      font-weight: 800;
+      font-family: Arial, Helvetica, sanf-serif;
+    }
   </style> 
 </head>
   <body>
