--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -19,7 +19,7 @@
      <table>
        <tr>
          <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
-         <td>BACHECA</td>
+         <td><span class="testo-spesso">BACHECA</span></td>
          <td>Bacheca Online</td>
          <td style="width:50px;"><img src="bollo_help_2.png" height="40px" width="40px" /></td>
        </tr> 
