--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -11,7 +11,12 @@
     span.testo-spesso {
       color: red;
       font-weight: 800;
-      font-family: Arial, Helvetica, sanf-serif;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    span.testo-fine {
+      color: grey;
+      font-weight: 100;
+      font-family: Arial, Helvetica, sans-serif;
     }
   </style> 
 </head>
