--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -12,11 +12,13 @@
       color: red;
       font-weight: 800;
       font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.5em;
     }
     span.testo-fine {
       color: grey;
       font-weight: 100;
       font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.5em;
     }
   </style> 
 </head>
