--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -27,7 +27,7 @@
        <tr>
          <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
          <td><span class="testo-spesso">BACHECA</span></td>
-         <td>Bacheca Online</td>
+         <td><span class="testo-fine">Bacheca Online</span></td>
          <td style="width:50px;"><img src="bollo_help_2.png" height="40px" width="40px" /></td>
        </tr> 
        <tr>
