--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -3,9 +3,11 @@
 <html>
 <head>
   <style>
-    table, th, td {
+    table{
       border: 1px solid black;
-      border-collapse: collapse; /* default: separate */
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
     }
     
     td {
