--- a/4ea/es6.html
+++ b/4ea/es6.html
@@ -30,16 +30,19 @@
       font-size: 1.5em;
     }
     
-
+    img {
+       height:40px; 
+       width: 40px;
+    }
   </style> 
 </head>
   <body>
      <table>
        <tr>
-         <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png"  height="40px" width="40px"/></td>
+         <td rowspan="2" style="width:50px;"><img src="bacheca_85px.png" /></td>
          <td style="width: 20%"><span class="testo-spesso">BACHECA</span></td>
          <td><span class="testo-fine">Bacheca Online</span></td>
-         <td style="width:50px;"><img src="bollo_help_2.png" height="40px" width="40px" /></td>
+         <td style="width:50px;"><img src="bollo_help_2.png" /></td>
        </tr> 
        <tr>
          <!-- <td></td> -->
