--- a/4ar/es4.html
+++ b/4ar/es4.html
@@ -8,6 +8,15 @@ table, th, td {
   border-collapse: collapse; /* default: separate */
 }
   
+  th, td {
+    padding: 10px 20px 10px 20px;
+    /*
+      padding-left: 20px;
+    
+    */
+    
+  }
+  
 .tuttogrigio {
     background-color: grey;
   }
