--- a/4ca/es5.html
+++ b/4ca/es5.html
@@ -6,13 +6,19 @@
   .sfondo {
     background-color: Bisque;
   }
+  
+  .giallo {
+    background-color: yellow;
+    color: red;
+    font-weight: bold;
+  }
 </style>
    
 </head>
   <body>
     <p class="sfondo">
       Saturno<br/>
-    Il primo studio, .... Swedish Institute of Space Physics,...
+      Il primo studio, .... <span class="giallo">Swedish Institute of Space Physics</span>,...
     e dell'università dello Iowa,....
     .... note come SKR (Saturn kilometyric radiation).
     </p> 
