--- a/4ca/es5.html
+++ b/4ca/es5.html
@@ -12,6 +12,14 @@
     color: red;
     font-weight: bold;
   }
+  
+  .azzurro {
+    color: aqua;
+  }
+  
+  .corsivo {
+    font-style: italic;
+  }
 </style>
    
 </head>
@@ -20,7 +28,8 @@
       Saturno<br/>
       Il primo studio, .... <span class="giallo">Swedish Institute of Space Physics</span>,...
     e dell'università dello Iowa,....
-    .... note come SKR (Saturn kilometyric radiation).
+      .... note come <span class="azzurro">SKR 
+      (<span>Saturn kilometyric radiation</span>)</span>.
     </p> 
   </body>
 </html>
