--- a/4ca/es5.html
+++ b/4ca/es5.html
@@ -29,7 +29,7 @@
       Il primo studio, .... <span class="giallo">Swedish Institute of Space Physics</span>,...
     e dell'università dello Iowa,....
       .... note come <span class="azzurro">SKR 
-      (<span>Saturn kilometyric radiation</span>)</span>.
+      (<span style="font-style: italic;">Saturn kilometyric radiation</span>)</span>.
     </p> 
   </body>
 </html>
