--- a/4dr/es5.html
+++ b/4dr/es5.html
@@ -6,11 +6,17 @@
   .sfondo {
     background-color: beige;
   }
+  
+  .giallo {
+    background-color: yellow;
+    color: red;
+    
+  }
 </style>
 </head>
   <body>
    <p class="sfondo"> Saturno<br>
-    il primo studio ..... Swedish Institute of Space ....
+    il primo studio ..... <strong class="giallo">Swedish Institute of Space<strong> ....
   dell'università
     ... nome come SKR (Saturn...)
      
