--- a/4dr/es5.html
+++ b/4dr/es5.html
@@ -15,8 +15,9 @@
 </style>
 </head>
   <body>
-   <p class="sfondo"> Saturno<br>
-    il primo studio ..... <strong class="giallo">Swedish Institute of Space<strong> ....
+    <p class="sfondo"> <span>Saturno</span><br>
+    il primo studio ..... <span class="giallo">Swedish 
+     Institute of Space<span> ....
   dell'università
     ... nome come SKR (Saturn...)
      
