--- a/4dr/es5.html
+++ b/4dr/es5.html
@@ -12,14 +12,18 @@
     color: red;
     font-weight: bold;
   }
+  
+  .azzurro {
+    color:Aquamarine;
+  }
 </style>
 </head>
   <body>
     <p class="sfondo"> <span>Saturno</span><br>
     il primo studio ..... <span class="giallo">Swedish 
-     Institute of Space<span> ....
-  dell'università
-    ... nome come SKR (Saturn...)
+     Institute of Space</span> ....
+  dell'università Iowa
+      ... nome come <span class="azzurro">SKR (Saturn...) </span>
      
     </p>
   </body>
