--- a/4dr/es5.html
+++ b/4dr/es5.html
@@ -16,6 +16,10 @@
   .azzurro {
     color:Aquamarine;
   }
+  
+  .corsivo {
+    font-style: italic;
+  }
 </style>
 </head>
   <body>
@@ -23,7 +27,7 @@
     il primo studio ..... <span class="giallo">Swedish 
      Institute of Space</span> ....
   dell'università Iowa
-      ... nome come <span class="azzurro">SKR (Saturn...) </span>
+      ... nome come <span class="azzurro">SKR (<span class="corsivo">Saturn...</span>) </span>
      
     </p>
   </body>
