--- a/4br/es4.html
+++ b/4br/es4.html
@@ -14,6 +14,7 @@ table, th, td {
 .grigio {
   background-color: grey;
 } 
+  
  
 </style> 
   
@@ -25,7 +26,7 @@ table, th, td {
       <tr>
         <th class="grigio" rowspan="2">N.</th>
         <td class="grigio" rowspan="2">Titolo</td>
-        <th colspan="2">Data di prima pubblicazione</th>
+        <th colspan="2" style="background-color: yellow;">Data di prima pubblicazione</th>
         <!-- <td></td> -->
       </tr>
       
