--- a/4br/es4.html
+++ b/4br/es4.html
@@ -15,7 +15,9 @@ table, th, td {
   background-color: grey;
 } 
   
- 
+.blu {
+  color: blue; 
+ } 
 </style> 
   
 </head>
@@ -33,8 +35,8 @@ table, th, td {
       <tr>
         <!-- <td></td> -->
         <!-- <td></td> -->
-        <th>Giapponese</th>
-        <th>Italiano</th>
+        <th class="blu">Giapponese</th>
+        <th class="blu">Italiano</th>
       </tr>
       
       <tr>
