--- a/4br/es4.html
+++ b/4br/es4.html
@@ -42,8 +42,8 @@ table, th, td {
       <tr>
         <th class="grigio" rowspan="2">1</th>
         <th>Ryomen Sukuna</th>
-        <td>4 luglio 2018<sup>[2]</sup></td>
-        <td>31 ottobre 2019<sup>[3]</sup></td>
+        <td>4 luglio 2018<sup  class="blu">[2]</sup></td>
+        <td>31 ottobre 2019<sup  class="blu">[3]</sup></td>
       </tr>
                   
       <tr>
