--- a/4br/es4.html
+++ b/4br/es4.html
@@ -10,6 +10,16 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse; /* default: separate */
 }
+
+ th, td {
+  padding: 10px 20px 10px 20px;
+  /* questo è un commento
+   padding-top: 10px;
+   padding-right: 20px;
+   padding-bottom: 10px;
+   padding-left: 20px;
+  */
+ } 
  
 .grigio {
   background-color: grey;
