--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -16,7 +16,7 @@
   <body>
     <p class="sfondo-beige">
       Saturno <br> 
-     il primo studio... ... <strong>Swedish Institute 
+     il primo studio... ... <strong class="giallo">Swedish Institute 
       of Space Physics</strong>,...
      e dell'Unisersità del'Iowa
      sulle cause ... 
