--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -10,6 +10,11 @@
       background-color: yellow;
       color: red;
   }
+  
+  .blu {
+      background-color: aqua;
+      color: blue;
+  }
 
 </style>  
 </head>
@@ -18,7 +23,7 @@
       Saturno <br> 
      il primo studio... ... <strong class="giallo">Swedish Institute 
       of Space Physics</strong>,...
-     e dell'Unisersità del'Iowa
+      e dell'<span class="blu">Università dell'Iowa</span>
      sulle cause ... 
     SKR (Saturn kilometric radiation)
     </p>
