--- a/4br/es5.html
+++ b/4br/es5.html
@@ -12,6 +12,10 @@
     color: red;
     font-weight: bold;
   }  
+  
+  .scritta-blu {
+    color: blue;
+  }
  </style>
 </head>
   <body>
@@ -20,7 +24,8 @@
    Il primo studio, condotto da ricercatori dello 
      <span class="sfondo-giallo">Swedish Institute of Space Physics...,... </span>
     e dell'Università dello Iowa, si è concentrato...
-    ..., note come SKR (Saturn kilometric radiation).
+     ..., note come 
+     <span class="scritta-blu">SKR (Saturn kilometric radiation)</span>.
     </div>
   </body>
 </html>
