--- a/4br/es5.html
+++ b/4br/es5.html
@@ -16,6 +16,10 @@
   .scritta-blu {
     color: blue;
   }
+  
+  .inclinato {
+   font-style: italic; 
+  }
  </style>
 </head>
   <body>
@@ -25,7 +29,7 @@
      <span class="sfondo-giallo">Swedish Institute of Space Physics...,... </span>
     e dell'Università dello Iowa, si è concentrato...
      ..., note come 
-     <span class="scritta-blu">SKR (Saturn kilometric radiation)</span>.
+     <span class="scritta-blu">SKR (<span class="inclinato">Saturn kilometric radiation</span>)</span>.
     </div>
   </body>
 </html>
