--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -16,6 +16,9 @@
       color: blue;
   }
 
+  .solo-blu {
+    color: blue;
+  }
 </style>  
 </head>
   <body>
@@ -25,7 +28,7 @@
       of Space Physics</strong>,...
       e dell'<span class="blu">Università dell'Iowa</span>
      sulle cause ... 
-    SKR (Saturn kilometric radiation)
+      <span class="solo-blu">SKR (Saturn kilometric radiation)</span>
     </p>
   
   </body>
