--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -19,6 +19,9 @@
   .solo-blu {
     color: blue;
   }
+  
+  .inclinato {
+  }
 </style>  
 </head>
   <body>
@@ -28,7 +31,7 @@
       of Space Physics</strong>,...
       e dell'<span class="blu">Università dell'Iowa</span>
      sulle cause ... 
-      <span class="solo-blu">SKR (Saturn kilometric radiation)</span>
+      <span class="solo-blu">SKR (<i>Saturn kilometric radiation</<  n>
     </p>
   
   </body>
