--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -21,6 +21,7 @@
   }
   
   .inclinato {
+    font-style: italic;
   }
 </style>  
 </head>
@@ -31,7 +32,7 @@
       of Space Physics</strong>,...
       e dell'<span class="blu">Università dell'Iowa</span>
      sulle cause ... 
-      <span class="solo-blu">SKR (<i>Saturn kilometric radiation</<  n>
+      <span class="solo-blu">SKR (Saturn kilometric radiation).</span>
     </p>
   
   </body>
