--- a/4ar/es5.html
+++ b/4ar/es5.html
@@ -22,7 +22,8 @@
   
   .inclinato {
     font-style: italic;
-  }
+  } 
+ 
 </style>  
 </head>
   <body>
@@ -32,7 +33,7 @@
       of Space Physics</strong>,...
       e dell'<span class="blu">Università dell'Iowa</span>
      sulle cause ... 
-      <span class="solo-blu">SKR (Saturn kilometric radiation).</span>
+      <span class="solo-blu">SKR (<span class="inclinato"> Saturn kilometric radiation</span>).</span>
     </p>
   
   </body>
