--- a/4dr/es6.html
+++ b/4dr/es6.html
@@ -6,16 +6,16 @@
   <body>
    <table>
      <tr>
-       <td></td>
-       <td></td>
-       <td></td>
+       <td colspan="2"></td>
+       <td>BACHECA</td>
+       <td>Bacheca online</td>
        <td></td>
      </tr>
      <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
+       <!-- <td></td> -->
+       <td>Bacheca online</td>
+       <td>Visdualizza i messaggi in bacheca</td>
+       <td>Aiuto</td>
      </tr>
    </table>
   </body>
