--- a/4dr/es6.html
+++ b/4dr/es6.html
@@ -14,7 +14,7 @@
      <tr>
        <!-- <td></td> -->
        <td>Bacheca online</td>
-       <td>Visdualizza i messaggi in bacheca</td>
+       <td>Visualizza i messaggi in bacheca</td>
        <td>Aiuto</td>
      </tr>
    </table>
