--- a/4dr/es6.html
+++ b/4dr/es6.html
@@ -6,7 +6,7 @@
   <body>
    <table>
      <tr>
-       <td colspan="2"></td>
+       <td rowspan="2"></td>
        <td>BACHECA</td>
        <td>Bacheca online</td>
        <td></td>
