--- a/4da/es5.html
+++ b/4da/es5.html
@@ -10,6 +10,10 @@
     font-weight: bold;
   }
   
+  .scritta-blu {
+    color:blue;
+  }
+  
 </style>
 </head>
   <body>
@@ -17,7 +21,7 @@
    Saturno <br/>
     Il primo studio, ..... dello <span class="giallo-rosso">Swedish Institute of Space Physics</span>, ... e
     dell'Università dello Iowa, si è con......
-    SKR (Saturtn kilometyric radiation).
+    <span class="scritta-blu">SKR (Saturtn kilometyric radiation)</span>.
   </p>
     <p>...
     </p>
